--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chromadb": "^1.5.6",
+    "langchain": "^0.0.127",
     "next": "13.4.13",
+    "openai": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
