--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.4.13",
     "openai": "^3.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-json-formatter": "^0.4.0"
   },
   "devDependencies": {
     "eslint": "8.47.0",
